--- a/exercicios/desafio12/cordel-moderno.css
+++ b/exercicios/desafio12/cordel-moderno.css
@@ -1,5 +1,8 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Sofia&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playball&family=Sofia&display=swap');
+
 * {
     margin: 0px;
     padding: 0px;
@@ -7,6 +10,8 @@
 html, body {
     min-height: 100vh;
     background-color: darkgray;
+    font-family: "Playball", cursivo;
+    
 }
 header {
     background-color: black;
@@ -33,7 +38,10 @@ section {
     padding-bottom: 10vh;
     line-height:  2em;
     padding-left: 30px;
-    font-size: 3.5vw;
+    font-size: 2.5vw;
+}
+section > p {
+    padding-bottom: 2em;
 }
 section.normal {
     background-color: white;
@@ -42,11 +50,25 @@ section.normal {
 section.imagem {
     background-color: rgb(51, 51, 51);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.39);
+    background-attachment: fixed;
+
+}
+section#img01 {
+    background-image: url(imagens/background001.jpg);
+    background-position: right center;
+    background-size: cover;
+}
+section#img02 {
+    background-image: url(imagens/background002.jpg);
+   background-size: cover;
+
 }
 section.imagem > p {
     display: inline-block;
     padding: 5px;
-    background-color: rgba(0, 0, 0, 0.253);
+    background-color: rgba(0, 0, 0, 0.514);
+    text-shadow: 1px 1px 0px black;
 }
 
 
